--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,6 @@ vstdlib_s64.dll
 whitelist.txt
 Profilesfolder/CommunityOnlineTools/Weather.json
 Profilesfolder/CommunityOnlineTools/Teleports_chernarusplus.json
+/@Namalsk Island
+/@Namalsk Survival
+/mpmissions/hardcore.namalsk/storage_1
