--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,5 @@ Profilesfolder/CommunityOnlineTools/Teleports_chernarusplus.json
 /@Namalsk Island
 /@Namalsk Survival
 /mpmissions/hardcore.namalsk/storage_1
+/@Dabs Framework
+/@DayZ Editor Loader
