--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,5 @@ Profilesfolder/CommunityOnlineTools/Teleports_chernarusplus.json
 /@Dabs Framework
 /@DayZ Editor Loader
 /@GW_Server_Tweaks
+/@InediaInfectedAI
+Profilesfolder/Inedia/InediaAdminsConfig.json
