--- a/Profilesfolder/Inedia/InediaInfectedAIConfig.json
+++ b/Profilesfolder/Inedia/InediaInfectedAIConfig.json
@@ -158,7 +158,7 @@
             },
             "HuntersProjectile": {
                 "ItemClasses": [
-                    "Vodka",
+                    "GlassBottle",
                     "HuntingKnife",
                     "HuntingKnife",
                     "Canteen",
@@ -205,7 +205,7 @@
             },
             "CityProjectile": {
                 "ItemClasses": [
-                    "Vodka",
+                    "GlassBottle",
                     "WaterBottle",
                     "BaseballBat",
                     "Pipe",
@@ -243,7 +243,7 @@
             },
             "VillagersProjectile": {
                 "ItemClasses": [
-                    "Vodka",
+                    "GlassBottle",
                     "FryingPan",
                     "Firewood",
                     "Pot",
@@ -281,7 +281,7 @@
             },
             "IndustrialProjectile": {
                 "ItemClasses": [
-                    "Vodka",
+                    "GlassBottle",
                     "Pipe",
                     "PipeWrench",
                     "Wrench",
@@ -317,7 +317,7 @@
             },
             "MedicsProjectile": {
                 "ItemClasses": [
-                    "Vodka",
+                    "GlassBottle",
                     "KitchenKnife",
                     "KitchenKnife",
                     "SteakKnife",
@@ -334,7 +334,7 @@
             },
             "FishermenProjectile": {
                 "ItemClasses": [
-                    "Vodka",
+                    "GlassBottle",
                     "HuntingKnife",
                     "KitchenKnife",
                     "Canteen",
