--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,6 @@ Profilesfolder/CommunityOnlineTools/Teleports_chernarusplus.json
 /@GW_Server_Tweaks
 /@InediaInfectedAI
 Profilesfolder/Inedia/InediaAdminsConfig.json
+/@DayZ-Bicycle
+/@Survivor Animations
+*.mdmp
